--- a/style/home.css
+++ b/style/home.css
@@ -3,3 +3,15 @@
     height: 600px;
     padding: 2hv;
 }
+div.perguntas {
+    display: inline-block;
+    width: 100%;
+
+}
+.respostas {
+    height: 200px;
+    overflow: hidden;
+    overflow-wrap: normal;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
